<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    style="@style/CardStyle.Home"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/material_theme_dialogs"
            android:textAppearance="@style/TextStyle.Title"/>

        <Button
            android:id="@+id/fragment_material_theme_button_dialog_current_theme"
            style="@style/ButtonStyle.Borderless.ColoredText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/material_element_spacing_medium"
            android:text="@string/material_theme_current_theme"/>

        <Button
            android:id="@+id/fragment_material_theme_button_dialog_green_theme"
            style="@style/ButtonStyle.Borderless.ColoredText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/material_element_spacing_small"
            android:text="@string/material_theme_green_theme"
            android:theme="@style/AppTheme.Green"/>

        <Button
            android:id="@+id/fragment_material_theme_button_dialog_blue_theme"
            style="@style/ButtonStyle.Borderless.ColoredText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/material_element_spacing_small"
            android:text="@string/material_theme_blue_theme"
            android:theme="@style/AppTheme.Blue"/>
    </LinearLayout>
</android.support.v7.widget.CardView>