<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    style="@style/CardStyle.Home"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/material_theme_spinners"
            android:textAppearance="@style/TextStyle.Title"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/view_spacing_medium"
            android:text="@string/material_theme_current_theme"
            android:textAppearance="@style/TextStyle.Body2"/>

        <Spinner
            android:id="@+id/fragment_material_theme_spinner_current_theme"
            style="@style/SpinnerStyle.Underlined"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/view_spacing_small"
            android:spinnerMode="dropdown"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/view_spacing_medium"
            android:text="@string/material_theme_green_theme"
            android:textAppearance="@style/TextStyle.Body2"/>

        <Spinner
            android:id="@+id/fragment_material_theme_spinner_green_theme"
            style="@style/SpinnerStyle.Underlined"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/view_spacing_small"
            android:spinnerMode="dropdown"
            android:theme="@style/AppTheme.Green"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/view_spacing_medium"
            android:text="@string/material_theme_blue_theme"
            android:textAppearance="@style/TextStyle.Body2"/>

        <Spinner
            android:id="@+id/fragment_material_theme_spinner_blue_theme"
            style="@style/SpinnerStyle.Underlined"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/view_spacing_small"
            android:spinnerMode="dropdown"
            android:theme="@style/AppTheme.Blue"/>
    </LinearLayout>
</android.support.v7.widget.CardView>