<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    style="@style/CardStyle.Home"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/material_theme_selectable_items_rounded_rect"
            android:textAppearance="@style/TextStyle.Title"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/view_spacing_small"
            android:text="@string/material_theme_default"
            android:textAppearance="@style/TextStyle.Body2"/>

        <LinearLayout
            style="@style/SelectableItemStyle.RoundedRect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/view_spacing_small"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:layout_margin="@dimen/view_spacing_small"
                android:adjustViewBounds="true"
                android:src="@mipmap/ic_launcher"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/view_spacing_small"
                android:text="@string/material_theme_current_theme"
                android:textAppearance="@style/TextStyle.Body1"/>
        </LinearLayout>

        <LinearLayout
            style="@style/SelectableItemStyle.RoundedRect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:theme="@style/AppTheme.Green">

            <ImageView
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:layout_margin="@dimen/view_spacing_small"
                android:adjustViewBounds="true"
                android:src="@mipmap/ic_launcher"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/view_spacing_small"
                android:text="@string/material_theme_green_theme"
                android:textAppearance="@style/TextStyle.Body1"/>
        </LinearLayout>

        <LinearLayout
            style="@style/SelectableItemStyle.RoundedRect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:theme="@style/AppTheme.Blue">

            <ImageView
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:layout_margin="@dimen/view_spacing_small"
                android:adjustViewBounds="true"
                android:src="@mipmap/ic_launcher"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/view_spacing_small"
                android:text="@string/material_theme_blue_theme"
                android:textAppearance="@style/TextStyle.Body1"/>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/view_spacing_small"
            android:text="@string/material_theme_colored"
            android:textAppearance="@style/TextStyle.Body2"/>

        <LinearLayout
            style="@style/SelectableItemStyle.RoundedRect.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/view_spacing_small"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:layout_margin="@dimen/view_spacing_small"
                android:adjustViewBounds="true"
                android:src="@mipmap/ic_launcher"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/view_spacing_small"
                android:text="@string/material_theme_current_theme"
                android:textAppearance="@style/TextStyle.Body1"/>
        </LinearLayout>

        <LinearLayout
            style="@style/SelectableItemStyle.RoundedRect.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:theme="@style/AppTheme.Green">

            <ImageView
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:layout_margin="@dimen/view_spacing_small"
                android:adjustViewBounds="true"
                android:src="@mipmap/ic_launcher"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/view_spacing_small"
                android:text="@string/material_theme_green_theme"
                android:textAppearance="@style/TextStyle.Body1"/>
        </LinearLayout>

        <LinearLayout
            style="@style/SelectableItemStyle.RoundedRect.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:theme="@style/AppTheme.Blue">

            <ImageView
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:layout_margin="@dimen/view_spacing_small"
                android:adjustViewBounds="true"
                android:src="@mipmap/ic_launcher"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/view_spacing_small"
                android:text="@string/material_theme_blue_theme"
                android:textAppearance="@style/TextStyle.Body1"/>
        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>